@@ -1,4 +1,5 @@
 v0.8.3 - Pending
+	+ Use F11 for fullscreen like most applications
 	+ Added Italian translation (Daniele Maggio)
 	+ Bug: Save As doesn't work
 
